Twenty Seventeen: Ensure long text wraps correctly in the Button Block.
This changeset replaces `white-space: nowrap` with `white-space: preline` to ensure long text used in the button block correctly wraps to a second line.

Follow-up to [44148].

Props robertghetau, bhrugesh12, sabernhardt, mukesh27.
Fixes #55783.

Built from https://develop.svn.wordpress.org/trunk@54139


git-svn-id: http://core.svn.wordpress.org/trunk@53698 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/assets/css/blocks.css
+++ b/wp-content/themes/twentyseventeen/assets/css/blocks.css
@@ -137,7 +137,7 @@ p.has-drop-cap:not(:focus)::first-letter {
 	padding: 0.7em 2em;
 	-webkit-transition: background-color 0.2s ease-in-out;
 	transition: background-color 0.2s ease-in-out;
-	white-space: nowrap;
+	white-space: pre-line;
 }
 
 .wp-block-file .wp-block-file__button:hover,
@@ -214,7 +214,7 @@ p.has-drop-cap:not(:focus)::first-letter {
 	padding: 0.7em 2em;
 	-webkit-transition: background-color 0.2s ease-in-out;
 	transition: background-color 0.2s ease-in-out;
-	white-space: nowrap;
+	white-space: pre-line;
 }
 
 .entry-content .wp-block-button__link {
